--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,6 @@
   margin: 0;
   padding: 0;
   font: inherit; /* Get rid of all font sizes and heights */
+  border: 1px solid #246861;
+  background-color: rgb(255, 228, 196, 0.3);
 }
