--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,40 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 * {
   margin: 0;
   padding: 0;
-  font: inherit; /* Get rid of all font sizes and heights */
   border: 1px solid #246861;
   background-color: rgb(255, 228, 196, 0.3);
+}
+
+section {
+  height: 50vh;
+  padding: 5vh max(10vw, 5rem);
+}
+
+.hero-content {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: min-content auto;
+}
+
+.header-container {
+  grid-column: 1/9;
+  grid-row: 1/2;
+}
+
+.hero-left {
+  grid-column: 1/6;
+  grid-row: 2/3;
+}
+
+.hero-content img {
+  grid-column: 6/9;
+  grid-row: 2/3;
+  margin: auto;
 }
