Adds btn images

--- a/src/App.css
+++ b/src/App.css
@@ -5,48 +5,79 @@
 }
 
 * {
+  font-family: Inter;
   margin: 0;
   padding: 0;
   border: 1px solid #246861;
   background-color: rgb(255, 228, 196, 0.3);
-  --morumsu: #4731D3;
-  --limon: #CBF281;
-}
-
-section {
-  height: 50vh;
-  padding: 5vh max(10vw, 5rem);
+  --morumsu: #4731d3;
+  --limon: #cbf281;
+  --btnclr: #3730A3;
 }
 
 .hero-section {
-  background: linear-gradient(to right, var(--morumsu) 80%, var(--limon) 50%);
+  background: linear-gradient(to right, var(--morumsu) 70%, var(--limon) 30%);
 }
 
 .hero-content {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   grid-template-rows: min-content auto;
 }
 
 .header-container {
-  grid-column: 1/9;
+  grid-column: 2/9;
   grid-row: 1/2;
 }
 
 .hero-left {
-  grid-column: 1/6;
+  grid-column: 2/7;
   grid-row: 2/3;
+  padding-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 1rem;
 }
 
-.hero-content img {
+.hero-img {
   grid-column: 7/9;
   grid-row: 2/3;
   margin: auto;
 }
 
-.box {
-  width: 150px;
-  height: 150px;
-  background: linear-gradient(to right, red 50%, green 50%);
+h1 {
+  color: var(--limon);
+  font-size: xxx-large;
+  padding-bottom: 1.5rem;
+}
+
+p {
+  color: white;
+  font-size: 2rem;
+}
+
+.hero-btns {
+  display: flex;
+  gap: 1rem;
+  color: var(--btnclr);
+} 
+
+button {
+  padding: .5em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  justify-content: center;
+  border-radius: 1em;
+  
+}
+
+button img {
+  width: 30%;
+}
+
+span {
+  font-size: x-large;
 }
