--- a/src/App.css
+++ b/src/App.css
@@ -15,34 +15,29 @@
   --btnclr: #3730a3;
 }
 
-section {
+main {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 1fr auto 1fr;
-  gap: 1rem;
+  grid-template-columns: repeat(12, 10%);
+  grid-template-rows: repeat(5, auto);
 }
 
 .hero-section {
-  background: linear-gradient(to right, var(--morumsu) 75%, var(--limon) 15%);
+  grid-row: 1/2;
 }
 
-.hero-container {
-  display: grid;
-  grid-template-columns: subgrid;
-  grid-column: 3/11;
+.skills-section {
   grid-row: 2/3;
 }
 
-.hero-left {
-  grid-column: 1/7;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  
+.profile-section {
+  grid-row: 3/4;
 }
 
-.hero-right {
-  grid-column: 9/11;
+.projects-section {
+  grid-row: 4/5;
 }
 
-/* END OF HERO SECTION */
+.footer-section {
+  grid-row: 5/6;
+
+}
