--- a/src/App.css
+++ b/src/App.css
@@ -13,31 +13,90 @@
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
+  --footerBackground: #f9f9f9;
+  --skillsBackground: #f5f5f5;
+  --heroBackground: linear-gradient(to right, #4731d3 70%, #cbf281 30%);
 }
 
 main {
   display: grid;
-  grid-template-columns: repeat(12, 10%);
+  grid-template-columns: repeat(10, 10%);
   grid-template-rows: repeat(5, auto);
 }
 
+section {
+  grid-column: 1/-1;
+  padding: 5rem 0;
+  display: grid;
+  grid-template-columns: inherit;
+  gap: 1rem;
+}
+
+/* */
+
 .hero-section {
   grid-row: 1/2;
+  background: var(--heroBackground);
 }
+
+.hero-container {
+  grid-column: 2/9;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.hero-left {
+  grid-column: 1/5;
+}
+
+.hero-right {
+  grid-column: -4;
+}
+/* */
 
 .skills-section {
   grid-row: 2/3;
+  background-color: var(--skillsBackground);
 }
+
+/* */
 
 .profile-section {
   grid-row: 3/4;
+  background-color: var(--morumsu);
 }
+
+.profile-container {
+  grid-column: 2/9;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.info-container {
+  grid-column: 1/3;
+}
+
+.profile-container img {
+  grid-column: 3/6;
+  margin: auto;
+}
+
+.info-content {
+  grid-column: 6/8;
+}
+/* */
 
 .projects-section {
   grid-row: 4/5;
+  background-color: var(--limon);
 }
+
+/* */
 
 .footer-section {
   grid-row: 5/6;
 
+  background-color: var(--footerBackground);
 }
+
+/* */
