--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ section {
   grid-column: 1/5;
 }
 
-
 /* */
 
 .skills-section {
@@ -58,9 +57,25 @@ section {
 }
 
 .skills-container {
+  column-gap: 4rem;
+  row-gap: 1rem;
   display: grid;
-  grid-column: 2/9;
-  grid-template-columns: repeat(auto-fill, 33%);
+  grid-column: 4/9;
+  grid-template-columns: repeat(auto-fill, 40%);
+}
+
+.skill {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.skill img {
+  height: 100%;
+}
+
+.skill p {
+  font-size: x-large;
 }
 /* */
 
