--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,39 @@ section {
 
 .hero-left {
   grid-column: 1/5;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.hero-container h1 {
+  font-size: xxx-large;
+  color: var(--limon);
+}
+
+.hero-left p {
+  font-size: x-large;
+  color: white;
+}
+
+.hero-btns {
+  display: flex;
+  gap: 1rem;
+}
+
+.hero-btns button {
+  display: flex;
+  gap: .5em;
+  align-items: center;
+  padding: 0.5em 1em;
+  border-radius: .5em;
+  color: var(--btnclr);
+  background-color: white;
+}
+
+.hero-btns img {
+  width: 25px;
 }
 
 /* */
@@ -62,6 +95,7 @@ section {
   display: grid;
   grid-column: 4/9;
   grid-template-columns: repeat(auto-fill, 40%);
+  justify-content: space-between;
 }
 
 .skill {
