--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ section {
   grid-column: 2/9;
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .hero-left {
@@ -51,6 +52,7 @@ section {
   flex-direction: column;
   justify-content: flex-end;
   gap: 1rem;
+  align-items: flex-start;
 }
 
 .hero-container h1 {
@@ -70,10 +72,10 @@ section {
 
 .hero-btns button {
   display: flex;
-  gap: .5em;
+  gap: 0.5em;
   align-items: center;
   padding: 0.5em 1em;
-  border-radius: .5em;
+  border-radius: 0.5em;
   color: var(--btnclr);
   background-color: white;
 }
@@ -126,15 +128,40 @@ section {
 
 .info-container {
   grid-column: 1/3;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
 }
 
 .profile-container img {
   grid-column: 3/6;
   margin: auto;
+  max-width: 100%;
+}
+
+.info-container span {
+  color: var(--limon);
+  min-width: 150px;
+}
+
+.info {
+  display: flex;
+  gap: 1em;
+  color: white;
+  flex-wrap: wrap;
+}
+
+.info-heading {
+  color: white;
 }
 
 .info-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   grid-column: 6/8;
+  color: white;
+  line-height: 1.5em;
 }
 /* */
 
