--- a/src/App.css
+++ b/src/App.css
@@ -186,4 +186,20 @@ section {
   gap: 1rem;
 }
 
+.footer-container h1 {
+  color: var(--morumsu);
+  font-size: xx-large;
+  padding-bottom: 1rem;
+}
+
+.footer-container a {
+  color: #3730a3;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
 /* */
