--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *,
 *::before,
 *::after {
@@ -8,7 +12,7 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  border: 1px solid #246861;
+  border: 1px solid black;
   background-color: rgb(255, 228, 196, 0.3);
   --morumsu: #4731d3;
   --limon: #cbf281;
@@ -91,23 +95,33 @@ section {
   background-color: var(--skillsBackground);
 }
 
+.skills-section h1 {
+  grid-column: 2/3;
+  color: var(--morumsu);
+  font-size: 3rem;
+}
+
 .skills-container {
-  column-gap: 4rem;
-  row-gap: 1rem;
-  display: grid;
   grid-column: 4/9;
-  grid-template-columns: repeat(auto-fill, 40%);
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: space-between;
+  
 }
 
 .skill {
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 40%;
 }
 
 .skill img {
   height: 100%;
+  max-width: 100px;
+  background-color: white;
 }
 
 .skill p {
