--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  border: 1px solid black;
-  background-color: rgb(255, 228, 196, 0.3);
+  /* border: 1px solid black;
+  background-color: rgb(255, 228, 196, 0.3); */
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
@@ -58,10 +58,6 @@ section {
 .hero-nav div {
   display: flex;
   gap: 3rem;
-}
-
-.hero-nav div button {
-  
 }
 
 .hero-container {
@@ -129,7 +125,6 @@ section {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  
 }
 
 .skill {
@@ -210,6 +205,64 @@ section {
 .projects-section {
   grid-row: 4/5;
   background-color: var(--limon);
+}
+
+.projects-container {
+  grid-column: 2/9;
+  display: grid;
+  grid-template-columns: subgrid;
+  gap: 0;
+  border-radius: 1rem;
+}
+
+.project-content {
+  border-radius: 0 1rem 1rem 0;
+}
+
+.project-content h2 {
+  color: var(--morumsu);
+  font-size: xx-large;
+}
+
+.project-btns {
+  display: flex;
+  gap: 1rem;
+  color: black;
+}
+
+.project-links {
+  display: flex;
+  gap: 1rem;
+  text-decoration: none;
+}
+
+.project-header {
+  grid-column: 2/9;
+  font-size: 3rem;
+  color: var(--morumsu);
+}
+
+.project-btns button {
+  padding: 0.2em 0.8em;
+  background-color: var(--btnclr);
+  color: white;
+  border-radius: 0.7em;
+  font-size: 1rem;
+}
+
+.projects-container img {
+  grid-column: 1/4;
+  width: 100%;
+  height: auto;
+}
+
+.project-content {
+  grid-column: 4/9;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  gap: 1rem;
 }
 
 /* */
