--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ section {
 
 .hero-left p {
   font-size: x-large;
-  color: white;
+  /* color: white; */
 }
 
 .hero-btns {
@@ -98,7 +98,7 @@ section {
   align-items: center;
   padding: 0.5em 1em;
   border-radius: 0.5em;
-  color: var(--btnclr);
+  /* color: var(--btnclr); */
   background-color: white;
 }
 
