--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ main {
   grid-template-rows: repeat(5, auto);
 }
 
-
 section {
   grid-column: 1/-1;
   padding: 5rem 0;
@@ -53,12 +52,23 @@ section {
   align-items: flex-start;
 }
 
+.language {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+}
+
+.language p {
+  font-size: medium;
+}
+
 .hero-nav h2 {
   /* color: var(--limon); */
 }
-.hero-nav div {
+.interactive{
   display: flex;
-  gap: 3rem;
+  gap: 1.7rem;
 }
 
 .hero-container {
