Adds padding between hero-nav and hero-container

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ section {
 .hero-section {
   grid-row: 1/2;
   background: var(--heroBackground);
+  padding-top: 1rem;
 }
 
 .hero-nav {
@@ -50,6 +51,9 @@ section {
   justify-content: space-between;
   grid-template-columns: subgrid;
   align-items: flex-start;
+  margin-bottom: 5rem;
+  border: 1px solid black;
+  
 }
 
 .language {
@@ -88,7 +92,7 @@ section {
 }
 
 .hero-container h1 {
-  font-size: xxx-large;
+  /* font-size: xxx-large; */
   /* color: var(--limon); */
 }
 
