--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  /* border: 1px solid black;
-  background-color: rgb(255, 228, 196, 0.3); */
+  border: 1px solid black;
+  background-color: rgb(255, 228, 196, 0.3);
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
@@ -53,14 +53,13 @@ section {
   align-items: flex-start;
   margin-bottom: 5rem;
   border: 1px solid black;
-  
 }
 
 .language {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .language p {
@@ -70,7 +69,7 @@ section {
 .hero-nav h2 {
   /* color: var(--limon); */
 }
-.interactive{
+.interactive {
   display: flex;
   gap: 1.7rem;
 }
@@ -174,47 +173,53 @@ section {
 
 .profile-container {
   grid-column: 2/9;
-  display: grid;
-  grid-template-columns: subgrid;
-}
-
-.info-container {
-  grid-column: 1/3;
   display: flex;
-  flex-direction: column;
-  gap: 1.5em;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.profile-child {
+  flex: 1;
 }
 
-.profile-container img {
+.info div {
+  display: inline-block;
+  width: 150px;
+}
+
+/* .info-container {
+  grid-column: 1/3; */
+/* display: flex;
+  flex-direction: column;
+  gap: 1.5em; */
+
+/* .profile-container img {
   grid-column: 3/6;
   margin: auto;
-  max-width: 100%;
-}
+  width: auto;
+} */
 
-.info-container span {
+/* .info-container span {
   /* color: var(--limon); */
-  min-width: 150px;
-}
+/* min-width: 150px; */
 
-.info {
-  display: flex;
+/* .info {
+  /* display: flex;
   gap: 1em;
   color: white;
-  flex-wrap: wrap;
-}
+  flex-wrap: wrap; */
 
-.info-heading {
+/* .info-heading {
   color: white;
-}
+} */
 
-.info-content {
+/* .info-content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   grid-column: 6/8;
   color: white;
   line-height: 1.5em;
-}
+} */
 /* */
 
 .projects-section {
@@ -224,15 +229,12 @@ section {
 
 .projects-container {
   grid-column: 2/9;
-  display: grid;
-  grid-template-columns: subgrid;
-  gap: 0;
-  border-radius: 1rem;
+  display: flex;
 }
 
-.project-content {
+/* .project-content {
   border-radius: 0 1rem 1rem 0;
-}
+} */
 
 .project-content p {
   font-size: 0.9rem;
@@ -270,9 +272,7 @@ section {
 }
 
 .projects-container img {
-  grid-column: 1/4;
-  width: 100%;
-  height: auto;
+  width: auto;
 }
 
 .project-content {
@@ -282,6 +282,7 @@ section {
   flex-direction: column;
   background-color: white;
   gap: 1rem;
+  border-radius: 0 1rem 1rem 0;
 }
 
 /* */
@@ -317,3 +318,48 @@ section {
 }
 
 /* */
+
+/* @media (max-width: 1200px) {
+
+  .projects-container {
+    grid-column: 2/9;
+    display: grid;
+    grid-template-columns: subgrid;
+    gap: 0;
+    border-radius: 1rem;
+  }
+
+  .projects-container {
+    display: flex;
+  }
+
+  .projects-container img {
+    width: auto;
+    
+  }
+
+  
+}  */
+
+
+
+@media (max-width: 1450px) {
+  .profile-container {
+    flex-direction: column;
+  }
+
+  .hero-container {
+    flex-direction: column-reverse;
+  }
+
+  .hero-nav {
+    margin-bottom: 1rem;
+  }
+  
+}
+
+@media (max-width: 1100px) {
+  .skills-container {
+    grid-column: 2/9;
+  }
+}
