--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   --btnclr: #3730a3;
   --footerBackground: #f9f9f9;
   --skillsBackground: #f5f5f5;
-  --heroBackground: linear-gradient(to right, #4731d3 77%, #cbf281 30%);
+  --heroBackground: linear-gradient(to right, #4731d3 77%, #cbf281 23%);
   font-size: 1.2rem;
 }
 
@@ -178,6 +178,11 @@ section {
 }
 .profile-child {
   flex: 1;
+  border: 1px solid black;
+}
+
+.profile img {
+  width: 100%;
 }
 
 .info {
@@ -344,11 +349,23 @@ section {
   
 }  */
 
-
-
 @media (max-width: 1450px) {
+  
+  section {
+    padding-right: 2rem;
+  }
+  
   .profile-container {
     flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .profile-child:nth-child(1) {
+    width: 100%;
+  }
+
+  .profile-child:nth-child(2) {
+    order: -1;
   }
 
   .hero-container {
@@ -358,7 +375,6 @@ section {
   .hero-nav {
     margin-bottom: 1rem;
   }
-  
 }
 
 @media (max-width: 1100px) {
