--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,14 @@
   font-size: 1.2rem;
 }
 
+.letter {
+  color: limegreen; /* Başlangıç rengi */
+  transition: color 0.3s ease; /* Renk değişimini yumuşak hale getir */
+}
+
 main {
   display: grid;
   grid-template-columns: repeat(10, 10%);
-  grid-template-rows: repeat(5, auto);
 }
 
 section {
@@ -40,7 +44,6 @@ section {
 /* */
 
 .hero-section {
-  grid-row: 1/2;
   background: var(--heroBackground);
   padding-top: 1rem;
 }
@@ -121,7 +124,6 @@ section {
 /* */
 
 .skills-section {
-  grid-row: 2/3;
   background-color: var(--skillsBackground);
 }
 
@@ -160,7 +162,6 @@ section {
 /* */
 
 .profile-section {
-  grid-row: 3/4;
   background-color: var(--morumsu);
 }
 
@@ -231,13 +232,24 @@ section {
 /* */
 
 .projects-section {
-  grid-row: 4/5;
   /* background-color: var(--limon); */
 }
 
 .projects-container {
   grid-column: 2/9;
   display: flex;
+}
+.projects-container img {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.project-left {
+}
+
+.project-rigjt {
+  flex: 2;
 }
 
 /* .project-content {
@@ -279,12 +291,27 @@ section {
   font-size: 1rem;
 }
 
+.project-left {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  border-radius: 1rem 0 0 1rem;
+}
+.project-right {
+  flex: 2;
+}
+
+.project-left {
+  flex: 1;
+}
+
 .projects-container img {
-  width: auto;
+  object-fit: cover;
+  object-position: left center;
+  overflow: hidden;
 }
 
 .project-content {
-  grid-column: 4/9;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -296,8 +323,6 @@ section {
 /* */
 
 .footer-section {
-  grid-row: 5/6;
-
   background-color: var(--footerBackground);
 }
 
@@ -350,15 +375,20 @@ section {
 }  */
 
 @media (max-width: 1450px) {
-  
   section {
     padding-right: 2rem;
   }
-  
+
   .profile-container {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
+
+  .profile-title {
+    text-align: center;
+  }
+
+  
 
   .profile-child:nth-child(1) {
     width: 100%;
@@ -377,8 +407,36 @@ section {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .skills-container {
     grid-column: 2/9;
+  }
+
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    margin: auto;
+  }
+
+  .projects-container img {
+    border: 1re;
+  }
+
+  .project-left {
+    border-radius: 1rem 1rem 0 0;
+  }
+
+  .project-right {
+    border-radius: 0 0 1rem 1rem;
+  }
+
+  .project-header {
+    text-align: center;
+  }
+
+  .skills-title {
+    text-align: center;
+    width: 100%;
   }
 }
