--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,8 @@ section {
   justify-content: flex-end;
   gap: 1rem;
   align-items: flex-start;
+  border: 1px solid black;
+  max-width: 70% ;
 }
 
 .hero-container h1 {
@@ -438,6 +440,7 @@ section {
     width: 100%;
   }
 }
+
 
 
 .main_title {
