--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@
   font-size: 1.2rem;
 }
 
-.letter {
-  color: limegreen; /* Başlangıç rengi */
-  transition: color 0.3s ease; /* Renk değişimini yumuşak hale getir */
-}
+/* .letter {
+  color: limegreen; 
+  transition: color 0.3s ease; 
+} */
 
 main {
   display: grid;
@@ -69,9 +69,6 @@ section {
   font-size: medium;
 }
 
-.hero-nav h2 {
-  /* color: var(--limon); */
-}
 .interactive {
   display: flex;
   gap: 1.7rem;
@@ -92,17 +89,11 @@ section {
   gap: 1rem;
   align-items: flex-start;
   border: 1px solid black;
-  max-width: 70% ;
-}
-
-.hero-container h1 {
-  /* font-size: xxx-large; */
-  /* color: var(--limon); */
+  max-width: 70%;
 }
 
 .hero-left p {
   font-size: x-large;
-  /* color: white; */
 }
 
 .hero-btns {
@@ -116,7 +107,7 @@ section {
   align-items: center;
   padding: 0.5em 1em;
   border-radius: 0.5em;
-  /* color: var(--btnclr); */
+
   background-color: white;
 }
 
@@ -172,7 +163,7 @@ section {
 
 .profile-section h1 {
   grid-column: 2/9;
-  /* color: var(--limon); */
+
   font-size: 3rem;
 }
 
@@ -200,45 +191,7 @@ section {
   width: 150px;
 }
 
-/* .info-container {
-  grid-column: 1/3; */
-/* display: flex;
-  flex-direction: column;
-  gap: 1.5em; */
-
-/* .profile-container img {
-  grid-column: 3/6;
-  margin: auto;
-  width: auto;
-} */
-
-/* .info-container span {
-  /* color: var(--limon); */
-/* min-width: 150px; */
-
-/* .info {
-  /* display: flex;
-  gap: 1em;
-  color: white;
-  flex-wrap: wrap; */
-
-/* .info-heading {
-  color: white;
-} */
-
-/* .info-content {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  grid-column: 6/8;
-  color: white;
-  line-height: 1.5em;
-} */
 /* */
-
-.projects-section {
-  /* background-color: var(--limon); */
-}
 
 .projects-container {
   grid-column: 2/9;
@@ -256,10 +209,6 @@ section {
 .project-rigjt {
   flex: 2;
 }
-
-/* .project-content {
-  border-radius: 0 1rem 1rem 0;
-} */
 
 .project-content p {
   font-size: 0.9rem;
@@ -358,28 +307,6 @@ section {
 
 /* */
 
-/* @media (max-width: 1200px) {
-
-  .projects-container {
-    grid-column: 2/9;
-    display: grid;
-    grid-template-columns: subgrid;
-    gap: 0;
-    border-radius: 1rem;
-  }
-
-  .projects-container {
-    display: flex;
-  }
-
-  .projects-container img {
-    width: auto;
-    
-  }
-
-  
-}  */
-
 @media (max-width: 1450px) {
   section {
     padding-right: 2rem;
@@ -441,8 +368,6 @@ section {
   }
 }
 
-
-
 .main_title {
   font-size: 6rem;
   line-height: 6rem;
@@ -450,11 +375,10 @@ section {
 }
 
 @media (max-width: 760px) {
-  
   section {
     padding-right: 4rem;
   }
-  
+
   .main_title {
     font-size: 4rem;
     color: rgb(255, 166, 0);
@@ -476,11 +400,6 @@ section {
     row-gap: 0.5em;
   }
 
-  /* .skill {
-    width: 30%;
-    flex-wrap: wrap;
-  } */
-
   .hero-nav {
     flex-direction: column;
     justify-content: flex-start;
@@ -488,15 +407,13 @@ section {
   }
 }
 
-@media (max-width:600px) {
-
+@media (max-width: 600px) {
   section {
     padding-right: 5rem;
   }
 }
 
 @media (max-width: 450px) {
-
   .interactive {
     display: flex;
     flex-direction: column;
@@ -504,7 +421,6 @@ section {
 }
 
 @media (max-width: 400px) {
-
   .main_title {
     font-size: 3rem;
   }
