--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ section {
   grid-column: 1/-1;
   background: var(--heroBackground);
   padding-top: 1rem;
+  padding-right: 2.2rem;
 }
 
 .hero-nav {
@@ -309,6 +310,10 @@ section {
 /* */
 
 @media (max-width: 1450px) {
+  .hero-section {
+    background: var(--morumsu);
+  }
+  
   section {
     padding-right: 2rem;
   }
