--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  /* border: 1px solid black;
-  background-color: rgb(255, 228, 196, 0.3); */
+  border: 1px solid black;
+  background-color: rgb(255, 228, 196, 0.3);
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
@@ -319,9 +319,9 @@ section {
     background: var(--morumsu);
   }
   
-  section {
+  /* section {
     padding-right: 2rem;
-  }
+  } */
 
   .profile-container {
     flex-direction: column;
@@ -353,6 +353,25 @@ section {
 @media (max-width: 1200px) {
   .skills-container {
     grid-column: 2/9;
+  }
+
+  .hero-nav {
+    width: 100%;
+    align-self: flex-start;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 3rem 2rem;
+    align-items: center;
+    
+  }
+
+  .skill {
+    width: 30%;
+    justify-content: space-around;
   }
 
   .projects-container {
@@ -391,8 +410,12 @@ section {
 }
 
 @media (max-width: 760px) {
-  section {
-    padding-right: 4rem;
+  .prj-img {
+    display: none;
+  }
+
+  .project-content {
+    border-radius: 5rem 2rem 3rem 2rem;
   }
 
   .main_title {
@@ -427,17 +450,18 @@ section {
   }
 }
 
-@media (max-width: 600px) {
-  section {
-    padding-right: 5rem;
-  }
-}
-
 @media (max-width: 450px) {
   .interactive {
     display: flex;
     flex-direction: column;
+    gap: 0.2rem;
   }
+
+  .hero-btns {
+    display: flex;
+    flex-direction: row;
+  }
+
 }
 
 @media (max-width: 400px) {
