--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  border: 1px solid black;
-  background-color: rgb(255, 228, 196, 0.3);
+  /* border: 1px solid black;
+  background-color: rgb(255, 228, 196, 0.3); */
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
@@ -437,10 +437,15 @@ section {
     align-items: center;
     align-content: flex-start;
     gap: 1rem;
-    width: 250%;
+    width: 25%;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: flex-start;
     row-gap: 0.5em;
+  }
+
+  .skill p {
+    display: none;
   }
 
   .hero-nav {
