--- a/src/App.css
+++ b/src/App.css
@@ -422,6 +422,11 @@ section {
     border-radius: 5rem 2rem 3rem 2rem;
   }
 
+  .projects-section {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
   .main_title {
     font-size: 4rem;
     color: rgb(255, 166, 0);
