--- a/src/App.css
+++ b/src/App.css
@@ -119,10 +119,6 @@ section {
 
 /* */
 
-.skills-section {
-  /* background-color: var(--skillsBackground); */
-}
-
 .skills-section h1 {
   grid-column: 2/3;
   color: var(--morumsu);
@@ -206,9 +202,6 @@ section {
   overflow: hidden;
 }
 
-.project-left {
-}
-
 .project-rigjt {
   flex: 2;
 }
@@ -224,7 +217,7 @@ section {
 
 .project-btns {
   display: flex;
-  gap: .2rem;
+  gap: 0.2rem;
   color: black;
   flex-wrap: wrap;
 }
@@ -318,10 +311,6 @@ section {
   .hero-section {
     background: var(--morumsu);
   }
-
-  /* section {
-    padding-right: 2rem;
-  } */
 
   .profile-container {
     flex-direction: column;
