--- a/src/App.css
+++ b/src/App.css
@@ -23,20 +23,7 @@
   font-size: 1.2rem;
 }
 
-.loader {
-  margin: 0 auto;
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
 
 main {
@@ -475,4 +462,44 @@ section {
   .hero-right {
     width: 70%;
   }
+}
+
+
+/* HTML: <div class="loader"></div> */
+.loader-container {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--limon);
+}
+
+.loader {
+  height: 15px;
+  aspect-ratio: 5;
+  display: grid;
+  animation: l39-0 1s infinite linear; 
+}
+.loader:before,
+.loader:after {
+  content: "";
+  width: calc(140%/3);
+  grid-area: 1/1;
+  --_g: no-repeat radial-gradient(farthest-side,#000 94%,#0000);
+  background:
+    var(--_g) left,
+    var(--_g) right;
+  background-size: calc(300%/7) 100%;
+  animation: l39-1 1s infinite linear; 
+}
+.loader:after {
+  margin-left: auto;
+  --s:-1;
+}
+@keyframes l39-0 {
+  0%,30% {transform: rotate(0)}
+  50%,100% {transform: rotate(.5turn)}
+}
+@keyframes l39-1 {
+  30%,70% {transform:translate(calc(var(--s,1)*400%/14))}
 }
