--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,6 @@
   font-size: 1.2rem;
 }
 
-
-
-
 main {
   display: grid;
   grid-template-columns: repeat(10, 10%);
@@ -464,7 +461,6 @@ section {
   }
 }
 
-
 /* HTML: <div class="loader"></div> */
 .loader-container {
   display: flex;
@@ -478,28 +474,35 @@ section {
   height: 15px;
   aspect-ratio: 5;
   display: grid;
-  animation: l39-0 1s infinite linear; 
+  animation: l39-0 1s infinite linear;
 }
 .loader:before,
 .loader:after {
   content: "";
-  width: calc(140%/3);
+  width: calc(140% / 3);
   grid-area: 1/1;
-  --_g: no-repeat radial-gradient(farthest-side,#000 94%,#0000);
-  background:
-    var(--_g) left,
-    var(--_g) right;
-  background-size: calc(300%/7) 100%;
-  animation: l39-1 1s infinite linear; 
+  --_g: no-repeat radial-gradient(farthest-side, #000 94%, #0000);
+  background: var(--_g) left, var(--_g) right;
+  background-size: calc(300% / 7) 100%;
+  animation: l39-1 1s infinite linear;
 }
 .loader:after {
   margin-left: auto;
-  --s:-1;
+  --s: -1;
 }
 @keyframes l39-0 {
-  0%,30% {transform: rotate(0)}
-  50%,100% {transform: rotate(.5turn)}
+  0%,
+  30% {
+    transform: rotate(0);
+  }
+  50%,
+  100% {
+    transform: rotate(0.5turn);
+  }
 }
 @keyframes l39-1 {
-  30%,70% {transform:translate(calc(var(--s,1)*400%/14))}
+  30%,
+  70% {
+    transform: translate(calc(var(--s, 1) * 400% / 14));
+  }
 }
