Formats documents with .prettierrc config

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,6 @@
   font-family: Inter;
   margin: 0;
   padding: 0;
-  /* border: 1px solid black;
-  background-color: rgb(255, 228, 196, 0.3); */
   --morumsu: #4731d3;
   --limon: #cbf281;
   --btnclr: #3730a3;
@@ -34,10 +32,7 @@ section {
   display: grid;
   grid-template-columns: inherit;
   gap: 1rem;
-  /* padding-right: 2rem; */
 }
-
-/* */
 
 .hero-section {
   grid-column: 1/-1;
@@ -85,8 +80,6 @@ section {
   justify-content: flex-end;
   gap: 1rem;
   align-items: flex-start;
-  /* border: 1px solid black; */
-  /* max-width: 70%; */
 }
 
 .hero-left p {
@@ -112,8 +105,6 @@ section {
   width: 25px;
 }
 
-/* */
-
 .skills-section h1 {
   grid-column: 2/3;
   color: var(--morumsu);
@@ -127,7 +118,6 @@ section {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  /* border: 1px solid black; */
 }
 
 .skill {
@@ -136,7 +126,6 @@ section {
   align-content: flex-start;
   gap: 1rem;
   width: 40%;
-  /* border: 1px solid black; */
 }
 
 .skill img {
@@ -149,7 +138,6 @@ section {
 .skill p {
   font-size: x-large;
 }
-/* */
 
 .profile-section {
   background-color: var(--morumsu);
@@ -169,7 +157,6 @@ section {
 }
 .profile-child {
   flex: 1;
-  /* border: 1px solid black; */
 }
 
 .profile-img {
@@ -184,8 +171,6 @@ section {
   display: inline-block;
   width: 150px;
 }
-
-/* */
 
 .projects-container {
   grid-column: 2/9;
@@ -266,8 +251,6 @@ section {
   border-radius: 0 1rem 1rem 0;
 }
 
-/* */
-
 .footer-section {
   background-color: var(--footerBackground);
 }
@@ -299,8 +282,6 @@ section {
 .gecemodu {
   color: var(--morumsu);
 }
-
-/* */
 
 @media (max-width: 1450px) {
   .hero-section {
@@ -461,7 +442,6 @@ section {
   }
 }
 
-/* HTML: <div class="loader"></div> */
 .loader-container {
   display: flex;
   height: 100vh;
@@ -478,7 +458,7 @@ section {
 }
 .loader:before,
 .loader:after {
-  content: "";
+  content: '';
   width: calc(140% / 3);
   grid-area: 1/1;
   --_g: no-repeat radial-gradient(farthest-side, #000 94%, #0000);
